--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -719,30 +719,86 @@ body{
             //  settings site
             // -------------------------------------
             #settings{
-                width: 260px;
+                width: 100%;
 
-                button{
-                    padding: 5px;
-                    margin-bottom: 5px;
-                }
-                #dj-wrapper, #upload-wrapper{
-                    float: left;
+                .image-wrapper {
                     display: block;
-                }
-                #dj-wrapper{
-                    #dj-image{
-                        width: 130px;
-                        height: 130px;
-                        display: block;
-                        background-size: cover;
+                    width: 100vw;
+
+                    .image-text-wrapper {
+                        float: left;
+                        width: 42.5vw;
+                        height: 20vh;
+                        max-height: 200px;
+                        min-height: 130px;
+                        background-color: $mainColorLight;
+                        // @include skewedBorder(right, -27px, 3, 90px, $mainColorLight);
+
+                        .info-text {
+                            color: $white;
+                            padding: 16px 0 0 16px;
+                        }
+                    }
+
+                    .image-wrapper {
+                        float: left;
+                        width: 57.5vw;
+                        height: 20vh;
+                        background-color: $btnColorMiddle;
+
+                        .dj-image {
+                            background-position: right center;
+                            background-size: cover;
+                            display: block;
+                            height:20vh;
+                            max-height: 200px;
+                            min-height: 130px;
+                            width: 57.5vw;
+                        }
                     }
                 }
-                #upload-wrapper{
-                    padding: 15px;
-                    background: lightgray;
-                    width: 100px;
-                    height: 100px;
+
+                #image-upload-wrapper {
+                    width: 100%;
+                    height: 52px;
+                    background-color: $mainColorDark;
+
+                    .image-button {
+                        padding: 16px 28px 0 10px;
+                        height: 36px;
+                        float: right;
+                        position: relative;
+
+                        img {
+                            position: relative;
+                            width: 18px;
+                            z-index: 100;
+                        }
+                    }
+
+                    .browse-button {
+                        background-color: $btnColorMiddle;
+                        @include skewedBorder(left, -10px, 100, 20px, $btnColorMiddle);
+                    }
+
+                    .upload-button {
+                        background-color: $btnColorMiddle;
+                        @include skewedBorder(left, -10px, 100, 20px, $btnColorMiddle);
+                    }
+
+                    .cancel-button {
+                        background-color: $btnColorDark;
+                        @include skewedBorder(left, -10px, 100, 20px, $btnColorDark);
+
+                    }
+
+                    .delete-button {
+                        background-color: $btnColorDark;
+                        @include skewedBorder(left, -10px, 100, 20px, $btnColorDark);
+                    }
+
                 }
+
                 .hide{
                     display: none;
                 }
