--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -44,24 +44,24 @@
 // -------------------------------------
 @font-face {
     font-family: 'ubuntubold';
-    src: url('../fonts/ubuntu-b-webfont.eot');
-    src: url('../fonts/ubuntu-b-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-b-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-b-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-b-webfont.ttf') format('truetype'),
-         url('../fonts/ubuntu-b-webfont.svg#ubuntubold') format('svg');
+    src: url('fonts/ubuntu-b-webfont.eot');
+    src: url('fonts/ubuntu-b-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/ubuntu-b-webfont.woff2') format('woff2'),
+         url('fonts/ubuntu-b-webfont.woff') format('woff'),
+         url('fonts/ubuntu-b-webfont.ttf') format('truetype'),
+         url('fonts/ubuntu-b-webfont.svg#ubuntubold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'ubunturegular';
-    src: url('../fonts/ubuntu-r-webfont.eot');
-    src: url('../fonts/ubuntu-r-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-r-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-r-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-r-webfont.ttf') format('truetype'),
-         url('../fonts/ubuntu-r-webfont.svg#ubunturegular') format('svg');
+    src: url('fonts/ubuntu-r-webfont.eot');
+    src: url('fonts/ubuntu-r-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/ubuntu-r-webfont.woff2') format('woff2'),
+         url('fonts/ubuntu-r-webfont.woff') format('woff'),
+         url('fonts/ubuntu-r-webfont.ttf') format('truetype'),
+         url('fonts/ubuntu-r-webfont.svg#ubunturegular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -69,12 +69,12 @@
 
 @font-face {
     font-family: 'ubuntumedium';
-    src: url('../fonts/ubuntu-m-webfont.eot');
-    src: url('../fonts/ubuntu-m-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/ubuntu-m-webfont.woff2') format('woff2'),
-         url('../fonts/ubuntu-m-webfont.woff') format('woff'),
-         url('../fonts/ubuntu-m-webfont.ttf') format('truetype'),
-         url('../fonts/ubuntu-m-webfont.svg#ubuntumedium') format('svg');
+    src: url('fonts/ubuntu-m-webfont.eot');
+    src: url('fonts/ubuntu-m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/ubuntu-m-webfont.woff2') format('woff2'),
+         url('fonts/ubuntu-m-webfont.woff') format('woff'),
+         url('fonts/ubuntu-m-webfont.ttf') format('truetype'),
+         url('fonts/ubuntu-m-webfont.svg#ubuntumedium') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -758,10 +758,26 @@ body{
                     }
                 }
 
+                .image-text {
+                    float: left;
+
+                    .progressbar {
+                        height: 52px;
+                        background-color: $btnColorDark;
+                        position: absolute;
+                        left: -20px;
+                        top: 0;
+                        bottom: 0;
+                        @include skewedBorder(right, -11px, 0, 20px, $btnColorDark);
+                    }
+
+                    .image-name {
+
+                    }
+                }
+
                 #image-upload-wrapper {
-                    width: 100%;
-                    height: 52px;
-                    background-color: $mainColorDark;
+                    float: right;
 
                     .image-button {
                         padding: 16px 28px 0 10px;
