added some styles

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -6,10 +6,12 @@
 		<!-- info track wrapper -->
 		<div id="info-track-wrapper">
 			<div id="info-track">
-			{{title}}<br>
-			{{artist}}<br>
-			{{album}}<br>
-			{{length}}<br>
+				<ul>
+					<li>{{title}}</li>
+					<li>{{artist}}</li>
+					<li>{{album}}</li>
+					<li>{{length}}</li>
+				</ul>
 			</div>
 		</div>
 
