--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -341,6 +341,7 @@ body{
                             font-size: 18px;
                             position: absolute;
                             left: 45px;
+                            color: $bgColor;
                         }
                     }
                     
@@ -416,6 +417,16 @@ body{
                             bottom: 0;
                             z-index: 3;
                             margin: 16px;
+                            color: $white;
+
+                            ul {
+                                list-style-type: none;
+
+                                li {
+                                    padding-bottom: 6px;
+                                }
+                            }
+                            
                         }
                     }
                     #dj-wrapper{
@@ -587,7 +598,7 @@ body{
                             }
 
                             .line-text {
-                                padding: 18px 0 0 16px;
+                                padding: 18px 10px 0 16px;
                                 color: $playlistText;
                                 float: left;
                                 position: relative;
