styled home and settings tab

--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -10,9 +10,9 @@
 		</div>
 	</div>
 
-	<div class="image-text">
+	<div class="image-text {{uploadImageFilename}}">
 		<div class="progressbar"></div>
-		<div class="image-name">blabla.jpg</div>
+		<div class="image-name"></div>
 	</div>
 
 	<!-- upload wrapper single file -->	
