--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -563,7 +563,7 @@ body{
 
                         .playlist-button {
                             padding: 18px 28px 0 10px;
-                            height: 36px;
+                            height: 34px;
                             float: right;
                             position: relative;
 
@@ -741,8 +741,9 @@ body{
                         float: left;
                         width: 25vw;
                         height: 30vh;
+                        position: relative;
                         background-color: $mainColorLight;
-                        @include skewedBorder(right, -27px, 3, 90px, $mainColorLight);
+                        @include skewedBorder(right, -27px, 1, 90px, $mainColorLight);
 
                         .info-text {
                             color: $white;
@@ -773,8 +774,7 @@ body{
                     background-color: $mainColorDark;
 
                     .progressbar {
-                        width: 200px;
-                        background-color: green;
+                        width: 0vw;
                         height: 52px;
                         background-color: $btnColorDark;
                         position: absolute;
@@ -786,7 +786,7 @@ body{
 
                     .image-name {
                         position: absolute;
-                        color: $bgColor;
+                        color: $white;
                         padding: 16px 0 0 16px;
                     }
                 }
