implemented progress and delete user image in settings

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -57,7 +57,7 @@
 						<img src="images/switch.svg" alt="">
 					</div>
 					<div class="playlist-button swapdown-button" v-if="t_id" v-on="click: swapUserTrack(($index + 1), 'down', this)">
-						<img src="images/switch.svg" alt="">
+						<img src="images/switch_down.svg" alt="">
 					</div>
 				</div>
 				
