--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -641,10 +641,6 @@ body{
                                 z-index: 80;
                                 background-color: $btnColorLight;
                                 @include skewedBorder(left, -10px, 80, 20px, $btnColorLight);
-
-                                img {
-                                    transform: rotate(180deg);
-                                }
                             }
 
                             &.showSwapUpClass {
@@ -747,6 +743,8 @@ body{
                         .info-text {
                             color: $white;
                             padding: 16px 0 0 16px;
+                            position: absolute;
+                            z-index: 3;
                         }
                     }
 
@@ -771,6 +769,17 @@ body{
                     width: 100vw;
                     position: relative;
                     background-color: $mainColorDark;
+
+                    .image-text-clickfield {
+                        width: 100%;
+                        height: 52px;
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        left: 0;
+                        z-index: 7;
+                    }
 
                     .progressbar {
                         width: 0vw;
@@ -812,22 +821,26 @@ body{
                     }
 
                     .browse-button {
+                        z-index: 9;
                         background-color: $btnColorMiddle;
                         @include skewedBorder(left, -10px, 100, 20px, $btnColorMiddle);
                     }
 
                     .upload-button {
+                        z-index: 9;
                         background-color: $btnColorMiddle;
                         @include skewedBorder(left, -10px, 100, 20px, $btnColorMiddle);
                     }
 
                     .cancel-button {
+                        z-index: 10;
                         background-color: $btnColorDark;
                         @include skewedBorder(left, -10px, 100, 20px, $btnColorDark);
 
                     }
 
                     .delete-button {
+                        z-index: 10;
                         background-color: $btnColorDark;
                         @include skewedBorder(left, -10px, 100, 20px, $btnColorDark);
                     }
