added some improvements to tour guide...
… and structured whole interactive guide …

--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -1,7 +1,7 @@
 <!-- wrapper settings -->
 <div id="settings">
 
-	<div class="image-wrapper clearfix">
+	<div id="dj-image-wrapper" class="image-wrapper clearfix">
 		<div class="image-text-wrapper">
 			<div class="info-text">Select your DJ image</div>
 		</div>
