changed txt to db

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -18,7 +18,7 @@
 		<!-- dj wrapper -->
 		<div id="dj-wrapper" v-on="click: jumpToSite('settings')">
 			<div class="dj-image {{djImageStateClassOne}}" v-style="background-image: 'url(' + imageOne + ')';"></div>
-			<div class="dj-image {{djImageStateClassTwo}}" v-style="background-image: 'url(' + imageTwo + ')';"></div>
+			<!-- <div class="dj-image {{djImageStateClassTwo}}" v-style="background-image: 'url(' + imageTwo + ')';"></div> -->
 			<div class="dj-image info {{djImageInfoStateClass}}">{{djImageInfo}}</div>
 		</div>
 		
