--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -224,6 +224,11 @@ html[xmlns] .clearfix {
                 top: 15px;
                 color: $white;
                 opacity: 0.5;
+
+                img{
+                    width: 14px;
+                    padding: 0 6px;
+                }
             }
 
             #tour-guide-info{
@@ -301,11 +306,14 @@ html[xmlns] .clearfix {
                 bottom: 15px;
                 color: $white;
                 opacity: 0.5;
-                background-color: $btnColorDark;
-                padding: 22px 16px;
-                height: 20px;
                 z-index: 2;
-                @include skewedBorder(left, -12px, 1, 24px, $btnColorDark);
+
+                .next-button{
+                    padding: 22px 16px;
+                    height: 20px;
+                    background-color: $btnColorDark;
+                    @include skewedBorder(left, -12px, 1, 24px, $btnColorDark);
+                }
 
                 img {
                     width: 14px;
@@ -319,11 +327,14 @@ html[xmlns] .clearfix {
                 bottom: 15px;
                 color: $white;
                 opacity: 0.5;
-                background-color: $btnColorMiddle;
-                padding: 22px 16px;
-                height: 20px;
                 z-index: 2;
-                @include skewedBorder(right, -12px, 1, 24px, $btnColorMiddle);
+
+                .prev-button{
+                    padding: 22px 16px;
+                    height: 20px;
+                    background-color: $btnColorMiddle;
+                    @include skewedBorder(right, -12px, 1, 24px, $btnColorMiddle);
+                }
 
                 img {
                     width: 14px;
@@ -335,7 +346,7 @@ html[xmlns] .clearfix {
                 position: absolute;
                 left: 35vw;
                 right: 35vw;
-                bottom: 15px;
+                bottom: 36px;
                 max-width: 30vw;
                 overflow: hidden;
                 text-align: center;
