further tour styling

--- a/app/scripts/templates/help/default.html
+++ b/app/scripts/templates/help/default.html
@@ -12,12 +12,12 @@
 	<div class="tour-start-wrapper">
 		<div class="tour-start-button" v-on="click: startTutorial('interactive')">
 			<img src="images/tutorial.svg" alt="">
-			interactive tutorial
+			<span>Interaktives Tutorial</span>
 		</div>
 		<br><br><br>
 		<div class="tour-start-button" v-on="click: startTutorial('text')">
 			<img src="images/tutorial.svg" alt="">
-			<span>text tutorial<span>
+			<span>Text Tutorial</span>
 		</div>
 	</div>
 
