fixed some bugs

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -29,7 +29,7 @@
 			</div>
 			<div id="downvote-response-message" class="{{downvoteResponseMessageStateClass}}">{{downvoteResponseMessage}}</div>
 			<div id="system-info-text">
-				<img src="images/battery.svg" alt="">
+				<!-- <img src="images/battery.svg" alt=""> -->
 				<img src="images/internet_access.svg" alt=""> {{internetAccess}}
 				<img src="images/users.svg" alt=""> {{users}}
 			</div>
