--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -3,7 +3,7 @@
 
 	<div id="dj-image-wrapper" class="image-wrapper clearfix">
 		<div class="image-text-wrapper">
-			<div class="info-text">Select your DJ image</div>
+			<div class="info-text">Wähle dein DJ Bild</div>
 		</div>
 		<div class="image-wrapper">
 			<div class="dj-image" v-style="background-image: 'url(' + userImageUrl + ')';"></div>
