added new default image + removed gulp music part

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -37,7 +37,9 @@
 
 	</div>
 
+
 	<div id="playlist-wrapper" class="clearfix">
+		<div id="playlist-title">Meine eigene Playlist</div>
 		<ul>
 			<li id="{{playlistStatus}}" v-repeat="playlist" class="playlist">
 
