translate my own playlist + util path change

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -39,7 +39,7 @@
 
 
 	<div id="playlist-wrapper" class="clearfix">
-		<div id="playlist-title">Meine eigene Playlist</div>
+		<div id="playlist-title">{{playlistTitle}}</div>
 		<ul>
 			<li id="{{playlistStatus}}" v-repeat="playlist" class="playlist">
 
