improved some stuff

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -1035,6 +1035,7 @@ body{
 
                 .tour-start-wrapper{
 
+                    margin-bottom: 20px;
                     .tour-start-button{
                         height: 36px;
                         padding: 16px 10px 0 10px;
@@ -1061,7 +1062,7 @@ body{
 
                 .icon-explanation{
                     margin: 20px 0 0 0;
-                    padding-left: 16px;
+                    padding: 0 16px 0 16px;
 
                     span{
                         color: $white;
