--- a/app/scripts/templates/help/default.html
+++ b/app/scripts/templates/help/default.html
@@ -15,10 +15,11 @@
 			<span>Interaktives Tutorial</span>
 		</div>
 		<br><br><br>
+		<!-- 
 		<div class="tour-start-button" v-on="click: startTutorial('text')">
 			<img src="images/tutorial.svg" alt="">
 			<span>Text Tutorial</span>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="icon-explanation">
