--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -23,17 +23,17 @@
 		</div>
 		
 		<!-- system info wrapper -->
-		<div id="system-info-wrapper">
-			<div id="downvote-button" class="{{downvoteActiveStateClass}} {{downvoteDisabledStateClass}}" v-on="click: downvoteTrack(id)">
-				<img src="images/downvote.svg" alt="">
+			<div id="system-info-wrapper">
+				<div id="downvote-button" class="{{downvoteActiveStateClass}} {{downvoteDisabledStateClass}}" v-on="click: downvoteTrack(id)">
+					<img src="images/downvote.svg" alt="">
+				</div>
+				<div id="downvote-response-message" class="{{downvoteResponseMessageStateClass}}">{{downvoteResponseMessage}}</div>
+					<div id="system-info-text" v-on="click: jumpToSite('help')">
+						<!-- <img src="images/battery.svg" alt=""> -->
+						<img src="images/internet_access.svg" alt=""> {{internetAccess}}
+						<img src="images/users.svg" alt=""> {{users}}
+					</div>
 			</div>
-			<div id="downvote-response-message" class="{{downvoteResponseMessageStateClass}}">{{downvoteResponseMessage}}</div>
-			<div id="system-info-text">
-				<!-- <img src="images/battery.svg" alt=""> -->
-				<img src="images/internet_access.svg" alt=""> {{internetAccess}}
-				<img src="images/users.svg" alt=""> {{users}}
-			</div>
-		</div>
 
 	</div>
 
