added ... if it‘s to long --> currently playing

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -7,10 +7,10 @@
 		<div id="info-track-wrapper">
 			<div id="info-track">
 				<ul>
-					<li>{{title}}</li>
-					<li>{{artist}}</li>
-					<li>{{album}}</li>
-					<li>{{length}}</li>
+					<li id="info-track-title">{{title}}</li>
+					<li id="info-track-artist">{{artist}}</li>
+					<li id="info-track-album">{{album}}</li>
+					<li id="info-track-length">{{length}}</li>
 				</ul>
 			</div>
 		</div>
